# asic-cells

./: .gitignore  Bender.yml  README.md  pyproject.toml  requirements.txt  setup.py
asic_cells/: spi.py  utils.py
asic_cells/spi/: SpiMessageCreator.py  __init__.py
src/: config_memory.py  config_memory.sv.jinja2  double_latching_barrier.v  generic_double_port_tsmc_sram.sv  generic_single_port_tsmc_sram.sv  high_speed_in_bus.v  high_speed_out_bus.v  managed_weight_memory.v  memory_manager.v  pointers.v.jinja2  skeleton.v  spi_client.sv  spi_clock_barrier_crossing.v  triple_toggle_barrier.v  weight_memory.v
src/aer/: high_speed_in_bus.v  high_speed_out_bus.v
src/clock/: clock_divider.v  custom_clock_generator.v  custom_clock_with_phase_generator.v  ext_or_int_clock.v  frequency_divider_stage.v
src/clock_domain_crossing/: double_flop_synchronizer.v  triple_flop_synchronizer.v  triple_flop_toggle_synchronizer.v  wide_double_flop_synchronizer.v
src/domain_crossing/: double_latching_barrier.v  triple_flop_synchronizer.v  triple_toggle_barrier.v  wide_double_delay_register.v  wide_double_latching_barrier.v
src/pipeline/: delay_register.v  double_delay_register.v  wide_delay_register.v  wide_double_delay_register.v
src/spi/: config_memory.sv.jinja2  generate_config_memory.py  generate_pointers.py  pointers.py  spi_clock_barrier_crossing.v
src/spi_interface/: config_memory.sv.jinja2  generate_config_memory.py  generate_pointers.py  memory_manager.v  pointers.v.jinja2  (+2 more)
test/: test_clock_divider.py  test_single_port_tsmc_sram.py  test_single_port_type_t_sram.py
(+8 files in other folders)
